<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="str_movie" translatable="false">Movie</string>
    <string name="str_tv" translatable="false">Tv</string>
    <string name="str_language" translatable="false">Language</string>
    <string name="change_language_settings" translatable="false">Language Setting</string>


    <string name="str_toolbar_movie" translatable="false">Movie Selection</string>
    <string name="str_toolbar_tv" translatable="false">Movie Selection</string>
    <string name="str_toolbar_language" translatable="false">Language Settings</string>

    <string name="desc_icon_lang">Icon Lang</string>

    <string name="sub_title_toolbar">New Movies (In Theaters)</string>
    <string name="cover_desc">Image cover movie</string>
    <string name="duration">Duration</string>
    <string name="release">Release</string>
    <string name="synopsis">Synopsis</string>
    <string name="director">Director</string>
    <string name="writers">Writers</string>
    <string name="stars">Stars</string>
</resources>
