<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvLabelDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/director"
        android:textColor="@color/colorTitleMovie"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTitleMovie"
        android:textSize="14sp"
        tools:text="@string/director" />

    <TextView
        android:id="@+id/tvLabelWriters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/writers"
        android:textColor="@color/colorTitleMovie"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvWriters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTitleMovie"
        android:textSize="14sp"
        tools:text="@string/writers" />

    <TextView
        android:id="@+id/tvLabelStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stars"
        android:textColor="@color/colorTitleMovie"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTitleMovie"
        android:textSize="14sp"
        tools:text="@string/stars" />

</LinearLayout>